# IncidentPilot

./: .env.example  .gitignore  MVP_GAPS.md  Makefile  NEXT_ITERATION_PLAN.md  README.md  REVIEW.md  config.example.yaml  pyproject.toml  v0.2-release-engineering-codex-prompt.md  v0.2-release-engineering-plan.md
.github/workflows/: ci.yml
agent/: __init__.py
agent/app/: config.py  database.py  main.py  migrations.py
agent/cli/: __init__.py  main.py
agent/prompts/: hypothesis_ranking.md  incident_diagnosis.md  incident_report.md
agent/static/: app.css  app.js
agent/templates/: base.html  dashboard.html  incident_detail.html  incidents.html  reports.html  services.html  settings.html
agent/tests/: __init__.py  test_cli_database.py  test_config.py  test_database.py  test_eval_runner.py  test_evidence_collector.py  test_health.py  test_health_poller.py  test_incident_lifecycle.py  test_incident_workflow.py  test_llm_diagnosis.py  test_llm_provider.py  test_persistence.py  test_prometheus_adapter.py  test_rule_diagnosis.py  test_runtime_adapters.py  test_scenario_runner.py  test_web_dashboard.py  test_what_changed.py  (+1 more)
docs/: data-retention.md  developer-guide.md  incidentpilot-demo-script.md  incidentpilot-foundation-guide.html  index.md  observability.md  setup.md  third-party-assets.md  troubleshooting.md  v0.2-persistence-lifecycle-plan.md  v0.2-release-engineering-plan.md
incidentpilot_v0_3_codex_ready_package/: incidentpilot_v0_3_codex_prompts.md  incidentpilot_v0_3_feature_spec.md  incidentpilot_v0_3_golden_fixtures.md  incidentpilot_v0_3_implementation_plan.md  incidentpilot_v0_3_tdd_checklist.md
infra/: compose.docker.override.yaml  compose.podman.override.yaml  compose.yaml
migrations/: env.py
scripts/: clean_checkout_smoke.sh  live_integration.sh  profile_database.py
(+73 files in other folders)
