[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "incidentpilot"
version = "0.1.0"
description = "Local-first, read-only incident triage for containerised services"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "python-dotenv>=1.0,<2",
  "pyyaml>=6.0,<7",
  "sqlalchemy>=2.0,<3",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
]

[project.scripts]
incidentpilot = "agent.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["agent/tests", "tests"]
